# STM32H5-security-solution

./: CMakeLists.txt  README.md
Binary/: appli_enc_sign.hex
Drivers/CMSIS/Device/ST/STM32H5xx/Include/: stm32h5xx.h
Images/: SM_Code_Image.xml
Inc/: common.h  crypto_tests_common.h  ft6x06_conf.h  its.h  main.h  priv_defines.h  stm32h573i_discovery_conf.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Middlewares/secure_manager_api/common_module/inc/: uk.h  uk_app.h  uk_config_features.h  uk_config_hw_mcu_device.h  uk_config_options_hw_mcu_core_arm_cmx.h  uk_hw_mcu_core_arm_cmx.h  uk_hw_mcu_family_stm_stm32h5xx.h  uk_release.h  uk_types.h
Middlewares/secure_manager_api/common_module/postbuild/: script.bat
Middlewares/secure_manager_api/common_module/src/: uk_app.c  uk_hw_mcu_core_arm_cmx.c
Middlewares/secure_manager_api/interface/inc/: psa_config.h  tfm_crypto_defs.h  tfm_fwu_defs.h
Middlewares/secure_manager_api/interface/inc/psa/: client_extension.h  crypto_extra.h  crypto_struct.h  initial_attestation.h  lifecycle.h  service.h
Middlewares/secure_manager_api/interface/src/: check_parameters.c  low_level_rng.c  psa_ia.c
Middlewares/secure_manager_api/ipc/nonsecure/inc/: ns_macros.h  secure_manager.h  tfm_ns_interface.h  tfm_psa_call_pack.h
Middlewares/secure_manager_api/ipc/nonsecure/src/: psa_client.c
ROT_Provisioning/: Certificate  env.bat  env.sh
ROT_Provisioning/SM/: README.md  provisioning.bat
ROT_Provisioning/SM/Binary/: ITS_Factory.hex  SecureManagerPackage.sfi
ROT_Provisioning/SM/Helper/: is_config_new.bat  read_xml.sh  update_nsapp_setup.bat
ROT_Provisioning/SM/Images/: SM_Code_Image.xml
ROT_Provisioning/Utilities/Certificates/: Release_Notes.md
ROT_Provisioning/Utilities/PC_Software/ITSbuilder/: Release_Notes.md
Src/: com.c  main.c  system_stm32h5xx_ns.c
Src/SM/: common.c  its.c
Utilities/X-CUBE-AI/App/: app_x-cube-ai.c  app_x-cube-ai.h
Utilities/lcd/: stm32_lcd.c
attest_app/: CMakeLists.txt  CMakePresets.json  README.md  STM32H573IIKXQ_FLASH.ld
attest_app/Binary/: appli_enc_sign.hex
attest_app/Images/: SM_Code_Image_bin.xml
attest_app/Inc/: cert.h  com.h  cryp.h  crypto_tests_config.h  eat.h  fwu.h  mx25lm51245g_conf.h  test_framework.h  test_framework_error_codes.h  ymodem.h
attest_app/Middlewares/mbed-crypto/include/mbedtls/: config.h
attest_app/Middlewares/secure_manager_api/: Release_Notes.md  SecureManagerAPI.chm
attest_app/Middlewares/secure_manager_api/common_module/inc/: doc_uk_services.h  uk_compilers.h  uk_config.h  uk_config_options.h  uk_config_options_hw_mcu_device.h  uk_config_options_hw_mcu_family_stm_stm32h5xx.h  uk_constants.h  uk_constraints.h  uk_helpers.h  uk_hw_mcu_device.h  uk_macros.h  uk_services.h
attest_app/Middlewares/secure_manager_api/interface/inc/: helper_function.h
attest_app/Middlewares/secure_manager_api/interface/inc/psa/: client.h  crypto.h  crypto_types.h  crypto_values.h  error.h  internal_trusted_storage.h  service_extension.h  update.h
attest_app/Middlewares/secure_manager_api/interface/src/: psa_fwu.c  psa_its.c  psa_lifecycle.c  tfm_crypto_secure_api.c
attest_app/Middlewares/secure_manager_api/ipc/nonsecure/inc/: ns.h  psa_client_pv.h
attest_app/Middlewares/secure_manager_api/ipc/nonsecure/src/: tfm_ns_interface.c
attest_app/Middlewares/secure_manager_api/ipc/secure/inc/: psa_client_pv.h  psa_secure_partition_pv.h
attest_app/Middlewares/secure_manager_api/ipc/secure/src/: psa_client.c  psa_secure_partition.c
attest_app/ROT_Provisioning/SM/: its_blob.bat  provisioning.sh  provisioning_auto.bat
attest_app/ROT_Provisioning/SM/Binary/: SecureManagerPackage_PROD_v1.1.4.ssfi  config_1_module_0_with_global_license_not_oem_sign.smu  version.bat
attest_app/ROT_Provisioning/SM/Helper/: update_config.bat  update_config.sh  update_module_setup.bat  update_nsapp_setup.sh
attest_app/ROT_Provisioning/SM/Images/: SM_ITS.xml  SM_Module_Image_template.xml
attest_app/ROT_Provisioning/SM/License/: SM_Module_Image_with_License_template_oem_sign.xml  SM_Module_Image_with_License_template_ota_oem_sign.xml
attest_app/ROT_Provisioning/Utilities/PC_Software/HASH_HAL_Migrator/: Release_Notes.md
attest_app/ROT_Provisioning/Utilities/PC_Software/IAT_Verifier/: Release_Notes.md
attest_app/Src/: main.c  ymodem.c
attest_app/Src/SM/: cert.c  cryp.c  crypto_tests_common.c  eat.c  fwu.c  system_stm32h5xx_ns.c
attest_app/Utilities/X-CUBE-AI/App/: network_tflite_data.h  tflm_c.cc
attest_app/cmake/: gcc-arm-none-eabi.cmake
attest_app/ml_model/: MNIST_full_quanitization.tflite.sha256  ml_model.template  test.py
attest_app/ml_model/best_model.model/: fingerprint.pb
attest_app/scripts/: download.sh  env.bat  postbuild.sh  prebuild.bat
cmake/: gcc-arm-none-eabi.cmake
ml_model/: MNIST_TFLM_Example_for_STM32.ipynb  MNIST_full_quanitization.tflite  gen_priv_key.py  get_binary_key.py  secp256k1_private_key.pem  tflm_network.c  train_mnist_model.py
ml_model/best_model.model/: keras_metadata.pb  saved_model.pb
ml_model/best_model.model/variables/: variables.data-00000-of-00001  variables.index
scripts/: download.bat  env.sh  prebuild.sh
